# KVH_1775_IMU_driver

./: .clang-format  .clang-tidy  CMakeLists.txt  EigenWrapper.h  NOTES.txt  README.txt  circular_buffer.h  constants.h  crc.c  datagram_parser.cpp  datagram_parser.h  debug.py  driver.cpp  driver.h  imu_driver.cpp  imu_driver.h  imu_driver_config.h  imu_driver_version.h  main.cpp  serial_driver.cpp  serial_driver.h  serial_unix.cpp  serial_unix.h  utils.cpp
CRC/: crc.h
stim300/: datagram_parser.cpp  datagram_parser.h  driver_stim300.cpp  driver_stim300.h  serial_driver.cpp  serial_driver.h  serial_unix.cpp  serial_unix.h  stim300_constants.h
